Acessibility Handbook: Add brightness
Add brightness section to the accessibility handbook.

Reviewed by:		pauamma_gundo.com
Approved by:		bcr
Sponsored by:		The FreeBSD Foundation
Differential Revision:	https://reviews.freebsd.org/D51285

--- a/documentation/content/en/books/accessibility/colors/_index.adoc
+++ b/documentation/content/en/books/accessibility/colors/_index.adoc
@@ -488,3 +488,121 @@ To use the yellow-blue.conf theme:
 # ln -s /usr/local/etc/portconfig/yellow-blue.conf /usr/local/etc/portconfig/theme.conf
 ....
 ====
+
+[[brightness]]
+== Brightness
+
+Screen brightness can be adjusted in various ways.
+The available methods depend heavily on the hardware, so it's recommended to try the features described in the following sections.
+
+[[backlight]]
+=== backlight
+
+The man:backlight[8] utility is included with the operating system.
+It is used to set the brightness of devices located under [.filename]#/dev/backlight/#.
+
+The  command `backlight -f _device_ _value_` sets the brightness of _device_ to _value_, where _value_ is an integer between 0 (dim) and 100 (bright).
+If no device is specified, the default device [.filename]#/dev/backlight/backlight0# is considered.
+
+Example for setting the brightness of the default device to 50%:
+
+[source,shell]
+....
+% backlight 50
+....
+
+[NOTE]
+====
+Unless the user belongs to the "video" group, the command needs to run as root.
+====
+
+[[acpi_video]]
+=== acpi_video
+
+The man:acpi_video[4] driver, included with the operating system, uses the ACPI Video Extensions to control display switching and backlight brightness.
+To load the kernel module, run:
+
+[source,shell]
+....
+# kldload acpi_video
+....
+
+Brightness settings can be configured using extref:{handbook}config/#configtuning-sysctl[sysctl(8)].
+The following parameters are available:
+
+- hw.acpi.video._device_.levels: List of supported brightness levels.
+- hw.acpi.video._device_.brightness: Current brightness level of the device.
+
+_device_ is a possible display device.
+Example to set the brightness to 50% for the lcd0 device:
+
+[source,shell]
+....
+% sysctl hw.acpi.video.lcd0.brightness <1>
+hw.acpi.video.lcd0.brightness: 90
+% sysctl hw.acpi.video.lcd0.levels <2>
+hw.acpi.video.lcd0.levels: 90 60 2 4 6 8 10 12 14 16
+18 20 22 24 26 28 30 32 34 36 38 40 42 44 46 48 50 52
+54 56 58 60 62 64 66 68 70 72 74 76 78 80 82 84 86 88
+90 92 94 96 98 100
+# sysctl hw.acpi.video.lcd0.brightness=50 <3>
+hw.acpi.video.lcd0.brightness: 90 -> 50
+....
+
+<.> `sysctl hw.acpi.video._device_.brightness` to view the current brightness level.
+<.> `sysctl hw.acpi.video._device_.levels` to view the available levels.
+<.> `sysctl hw.acpi.video._device_.brightness=50` to set the brightness to 50.
+
+[NOTE]
+====
+man:acpi_video[4] should be loaded after any of the extref:{handbook}x11/#x-graphic-card-drivers[DRM] kernel modules.
+====
+
+[[xbrightness]]
+=== xbrightness
+
+The package:x11/xbrightness[] utility can change the brightness via the extref:{handbook}x11[X Window System].
+
+[source,shell]
+....
+# pkg install xbrightness
+....
+
+The man:xbrightness[1] utility allows to set a value between 0 (darkness) and 65535 (full brightness).
+Example for setting brightness to 50%:
+
+[source,shell]
+....
+% xbrightness 32767
+....
+
+[[xrandr]]
+=== xrandr
+
+The package:x11/xrandr[] package is an extension of the X11 server that provides the man:xrandr[1] utility.
+It allows you to configure various display properties, including brightness.
+To install execute:
+
+[source,shell]
+....
+# pkg install xrandr
+....
+
+The command `xrandr --output _monitor_ --brightness _brightness_` allows you to set the brightness for monitor to a value between 0 and 1.0.
+To list the available monitors, run:
+
+[source,shell]
+....
+% xrandr --listmonitors
+Monitors: 2
+ 0: +HDMI-1 1920/598x1080/337+0+0  HDMI-1
+ 1: +eDP-1 1920/344x1080/194+1920+0  eDP-1
+
+....
+
+Example for setting brightness to 50% for HDMI-1:
+
+[source,shell]
+....
+% xrandr --output HDMI-1 --brightness 0.5
+....
