Acessibility Handbook: Add KDE examples
Approved by:		bcr
Sponsored by:		The FreeBSD Foundation
Differential Revision:	https://reviews.freebsd.org/D51294

--- a/documentation/content/en/books/accessibility/blindness/_index.adoc
+++ b/documentation/content/en/books/accessibility/blindness/_index.adoc
@@ -88,10 +88,11 @@ From a terminal, type:
 % orca
 ....
 
-Some desktop environments provide a keyboard shortcut to launch Orca:
-
-- XFCE: `Super` + `Alt` + `s`
-- GNOME `Super` + `Alt` + `S`
+Some desktop environments
+(extref:{handbook}desktop/#kde-environment[KDE Plasma],
+extref:{handbook}desktop/#xfce-environment[XFCE],
+extref:{handbook}desktop/#gnome-environment[GNOME])
+provide a keyboard shortcut to launch Orca: `Super` + `Alt` + `s`.
 
 [TIP]
 ====
