--- a/documentation/content/en/books/accessibility/colors/_index.adoc
+++ b/documentation/content/en/books/accessibility/colors/_index.adoc
@@ -64,6 +64,22 @@ This chapter explains how to configure colors for on-screen elements, including:
 Graphical Environments allow you to easily install and set up graphical themes.
 This paragraph describes how to configure high contrast themes for windows.
 
+[[kde-high-contrast]]
+=== KDE Plasma
+
+Launch the `Global Theme` module:
+
+[source,shell]
+....
+% kcmshell6 kcm_lookandfeel
+....
+
+The window shows the current installed themes.
+Click on the "Get New..." icon in the top right corner.
+A new window will show additional themes available for installation.
+In the search field at the top right, you can look for new themes to install.
+You can search for "high contrast" or "Acrilic Dark".
+
 [[xfce-high-contrast]]
 === XFCE
 
@@ -106,6 +122,22 @@ The theme selection steps (5 and 6) can also be performed using the graphical co
 
 Graphical Environments allow you to easily install and set up icon themes.
 This paragraph describes how to configure high contrast icons.
+
+[[kde-icon-high-contrast]]
+=== KDE Plasma
+
+Open the `_Icons_` module:
+
+[source,shell]
+....
+% kcmshell6 kcm_icons
+....
+
+The window displays the currently installed icon themes.
+To install a new theme, click the `_Get New..._` icon in the top right corner.
+A new window will appear, allowing you to browse and install additional icon themes.
+As a suggestion, you can search for `Treepata` using the search bar at the top right.
+Although originally designed for XFCE and later adapted for KDE Plasma, Treepata was created as a high-contrast accessibility theme.
 
 [[xfce-icon-high-contrast]]
 === XFCE
@@ -179,6 +211,11 @@ Some utilities are compatible with the extref:{handbook}x11[X Window System], ot
 | Yes
 | X11
 | package:accessibility/gammastep[]
+
+| Night Light
+| Yes
+| extref:{handbook}desktop/#kde-environment[KDE Plasma]
+| package:x11/kde[]
 
 | redshift
 | Yes
@@ -263,6 +300,19 @@ Simply start it by running:
 If you encounter any issues, customize the configuration by adapting the link:https://gitlab.com/chinstrap/gammastep/-/blob/master/gammastep.conf.sample[gammastep.conf.sample] file and save it as [.filename]#~/.config/gammastep/conf.ini#.
 Refer to the link:https://gitlab.com/chinstrap/gammastep/-/blob/master/README.md[README] for troubleshooting.
 ====
+
+[[kde-nightlight]]
+=== KDE Plasma
+
+KDE allows you to adjust the screen color temperature based on geographic location and local time.
+Launch the `_Night Light_` module:
+
+[source,shell]
+....
+% kcmshell6 kcm_nightlight
+....
+
+Enable automatic color adjustment by selecting the desired option from the `_Switching times_` drop-down menu.
 
 [[redshift]]
 === redshift
@@ -606,3 +656,22 @@ Example for setting brightness to 50% for HDMI-1:
 ....
 % xrandr --output HDMI-1 --brightness 0.5
 ....
+
+[[colorblindness]]
+== Color Blindness
+
+This section describes how to use utilities designed for color blindness.
+
+[[kde-colorblindness]]
+=== KDE Plasma
+
+KDE allows you to filter colors for graphical elements.
+Launch the `_Accessibility_` module:
+
+[source,shell]
+....
+% kcmshell6 kcm_access
+....
+
+In the navigation pane, select `_Color Blindness Correction_`.
+Enable the `_Color blindness correction_` option, then choose the appropriate color transformation mode from the `_Mode_` drop-down menu.
