--- a/documentation/content/en/books/accessibility/lowvision/_index.adoc
+++ b/documentation/content/en/books/accessibility/lowvision/_index.adoc
@@ -60,6 +60,19 @@ This chapter outlines accessibility features available in graphical desktop envi
 Graphical environments allow users to adjust the desktop display size, a feature commonly known as screen scaling or HiDPI scaling.
 The goal is to enlarge desktop elements such as icons, text, and windows to improve visibility and accessibility.
 
+[[kde-hidpi]]
+=== KDE Plasma
+
+Open the `_Display Configuration_` module:
+
+[source,shell]
+....
+% kcmshell6 kcm_kscreen
+....
+
+Select the scaling via the `_Global Scale_` bar.
+The change will take effect after a KDE Plasma restart.
+
 [[xfce-hidpi]]
 === XFCE
 
@@ -92,6 +105,23 @@ To install, execute:
 ....
 
 The remainder of this section describes how to set up fonts in various graphical environments using _atkinson-hyperlegible_ as an example.
+
+[[kde-fonts]]
+=== KDE Plasma
+
+KDE allows selecting a font and its size via the `_Fonts_` module.
+Run:
+
+[source,shell]
+....
+% kcmshell6 kcm_fonts
+....
+
+Click on the Adjust `_All Fonts..._` button to select the font and its size for all graphical elements.
+Alternatively, you can choose the font and size for individual elements using the forms below.
+
+At the bottom of the window, you can also select options such as `_Anti-Aliasing_`, `_Sub-pixel Rendering_`, `_Hinting_`, and `_Force Font DPI_`.
+Each option has an icon on the right to open a help dialog.
 
 [[xfce-fonts]]
 === XFCE
@@ -311,6 +341,25 @@ Interaction is keyboard-driven, refer to man:xzoom[1] for available commands and
 
 Some desktop environments allow you to change the size, color, and other graphical properties of the mouse cursor.
 
+[[kde-mouse]]
+==== KDE Plasma
+
+KDE Plasma provides the `_Cursors_` module to select the mouse cursor theme and size.
+To launch it, run:
+
+[source,shell]
+....
+% kcmshell6 kcm_cursortheme
+....
+
+Select an installed cursor theme in the window.
+There is a `_Size_` drop-down menu in the top left corner to choose the mouse cursor size,
+available sizes depend on the selected theme.
+
+Click the `_Get New..._` icon in the top right corner to install a new theme.
+You can install new themes from the new window.
+As a suggestion, search for `_Large Mouse Cursors_`, a black and white high contrast theme.
+
 [[xfce-mouse]]
 ==== XFCE
 
@@ -341,6 +390,28 @@ The following example set the current theme cursur to size 50:
 === Find Cursor
 
 Some desktop environments provide a visul feedback of the mouse pointer's current position.
+
+[[kde-find-mouse-cursor]]
+==== KDE Plasma
+
+KDE Plasma draws two circular lines moving around the mouse cursor.
+Open the `Desktop Effects` module:
+
+[source,shell]
+....
+% kcmshell6 kcm_kwin_effects
+....
+
+Enable the `_Track Mouse_` checkbox.
+Draw circular lines by pressing `Meta` + `Ctrl` keys.
+You can change the shortcut via the `_Configure_` button related to `_Track Mouse_`.
+
+[TIP]
+====
+On keyboards where the `Meta` key is not present, it is usually replaced by the `Super` key.
+Refer to https://en.wikipedia.org/wiki/Meta_key and https://en.wikipedia.org/wiki/Super_key_(keyboard_button) for more information.
+====
+
 
 [[xfce-find-mouse-cursor]]
 ==== XFCE
