Accessibility Handbook: Add Speech Synthesizer
Reviewed by:		pauamma_gundo.com
Approved by:		bcr
Sponsored by:		The FreeBSD Foundation
Differential Revision:	https://reviews.freebsd.org/D51286

--- a/documentation/content/en/books/accessibility/blindness/_index.adoc
+++ b/documentation/content/en/books/accessibility/blindness/_index.adoc
@@ -157,6 +157,143 @@ To create a user-specific configuration file, copy the global one to your home d
 
 For details on configuration options and keyboard shortcuts, refer to man:yasr[1].
 
+[[speech-synthesizer]]
+== Speech Synthesizer
+
+The purpose of the speech synthesizer is to provide audio output for screen readers by converting on-screen text to speech.
+This section explains how to install speech synthesizers, perform a basic functionality test, and locate their documentation for further configuration.
+
+[NOTE]
+====
+Information about the FreeBSD audio subsystem can be found in extref:{handbook}multimedia[Multimedia] and in the man:sound[4] manual page.
+====
+
+[[espeak-ng]]
+=== eSpeak NG
+
+The package:audio/espeak-ng[] package provides man:espeak-ng[1], a multilingual speech synthesizer.
+
+To install, run:
+
+[source,shell]
+....
+# pkg install espeak-ng
+....
+
+To test, execute the following command:
+
+[source,shell]
+....
+% espeak-ng "Hello World, FreeBSD!"
+....
+
+eSpeak NG is a versatile and feature-rich utility.
+For more information, consult its manual page, man:espeak-ng[1], and the https://github.com/espeak-ng/espeak-ng/blob/master/docs/index.md[official online documentation].
+
+[[flite]]
+=== Flite
+
+package:audio/flite[] is a speech synthesizer that is part of the http://festvox.org[FestVox] project.
+It is designed as a small and fast alternative to crossref:blindness[festival, Festival], built using the FestVox suite.
+To install, run:
+
+[source,shell]
+....
+# pkg install flite
+....
+
+To test, execute the following commands:
+
+[source,shell]
+....
+% flite "Hello world, BSD!"
+% flite_time 10:30
+The time is now, exactly half past ten, in the morning.
+....
+
+The project does not provide a manual page.
+Documentation is available in [.filename]#/usr/local/share/doc/flite/README.md# and http://www.festvox.org/flite/doc/index.html[online].
+
+[[festival]]
+=== Festival
+
+The package:audio/festival[] package provides man:festival[1], a multilingual speech synthesizer.
+To install, run:
+
+[source,shell]
+....
+# pkg install festival
+....
+
+Festival needs at least one festvox-_voice_ package to generate a synthetic voice.
+Run the following command to list available voice packages:
+
+[source,shell]
+....
+% pkg search festvox
+....
+
+Then install a voice package.
+For example, to install the American English male voice festvox-kal16-1.4.0, run:
+
+[source,shell]
+....
+# pkg install festvox-kal16
+....
+
+To test, execute:
+
+[source,shell]
+....
+% echo "Hello world, BSD!" | festival --tts
+....
+
+[TIP]
+====
+In the case of the error `Can't access NAS server`, example:
+
+[source,shell]
+....
+% echo "Hello world, BSD!" | festival --tts
+Can't access NAS server %
+....
+
+Add the following line to [.filename]#/usr/local/share/festival/lib/siteinit.scm#:
+
+[.programlisting]
+....
+(Parameter.set 'Audio_Method 'freebsd16audio)
+....
+====
+
+For more information about Festival, consult its manual page, man:festival[1], and the http://www.festvox.org/docs/manual-2.4.0/festival_toc.html[official online documentation].
+
+[[speech-dispatcher]]
+=== Speech Dispatcher
+
+The Speech Dispatcher project provides a high-level device independent layer for access to speech synthesis.
+To install package:accessibility/speech-dispatcher[], run:
+
+[source,shell]
+....
+# pkg install speech-dispatcher
+....
+
+To test, execute:
+
+[source,shell]
+....
+% spd-say "Hello world, FreeBSD!"
+....
+
+Speech Dispatcher provides two manual pages, man:spd-say[1] and man:speech-dispatcher[1], as well as https://freebsoft.org/speechd[online documentation].
+
+[TIP]
+====
+The package:audio/festival-freebsoft-utils[] package provides additional features for crossref:blindness[festival,Festival] to interact with Speech Dispatcher.
+Refer to the https://freebsoft.org/festival-freebsoft-utils[online documentation] to know more.
+====
+
 [[blindness-ports]]
 == Ports Collection
 
@@ -293,6 +430,15 @@ Translated versions of the user guide are available in the same directory:
  - usersguide_es.html: Spanish
  - usersguide_fr.html: French
  - usersguide_pt_br.html: Brazilian Portuguese
+
+[[blindness-webapps]]
+=== Web Apps
+
+Some web applications can use APIs to send output to audio devices.
+Refer to crossref:blindness[speech-synthesizer,Speech Synthesizer] to install a utility and the corresponding library.
+
+The extref:{handbook}desktop/#firefox[Firefox] browser can report the error message: `You can’t use speech synthesis because the Speech Dispatcher library is missing` or https://support.mozilla.org/en-US/kb/speechd-setup[other errors].
+To solve, install crossref:blindness[speech-dispatcher,Speech Dispatcher].
 
 [[blindness-liblouis]]
 == Liblouis
