--- a/website/content/en/releases/15.0R/schedule.adoc
+++ b/website/content/en/releases/15.0R/schedule.adoc
@@ -57,7 +57,8 @@ General discussions about the pending release and known issues should be sent to
 |18 November 2025 |Second release candidate.
 |RC3 builds begin |[.line-through]#14 November 2025# +
 21 November 2025 |21 November 2025 |Third release candidate.
-|[.line-through]#RC4 builds begin# |[.line-through]#21 November 2025# |- |[.line-through]#Fourth release candidate.#
+|RC4 builds begin |[.line-through]#21 November 2025# +
+24 November 2025 |24 November 2025 |Fourth release candidate.
 |RELEASE builds begin |28 November 2025 |- |{localRel}-RELEASE builds begin.
 |RELEASE announcement |2 December 2025 |- |{localRel}-RELEASE press release.
 |{localRel} EoL |30 September 2026 |- |{localRel}-RELEASE no longer supported.
