website: add translation of missing pages (3)
Reviewed by: andy, marck
Differential Revision: https://reviews.freebsd.org/D53864

--- a/website/content/ru/news/_index.adoc
+++ b/website/content/ru/news/_index.adoc
@@ -5,26 +5,50 @@ loadNews: false
 ---
 
 = Новости FreeBSD
+[#_local_news]
 
-[.right]
-image:../../gifs/news.jpg[Новости FreeBSD]
+== Проект FreeBSD и Фонд FreeBSD
 
-== Местные новости
+link:newsflash[Новостная лента FreeBSD]
 
-* *link:newsflash[Последние новости FreeBSD]*: Новые релизы, драйверы, коммиттеры, объявления, касающиеся безопасности и другие новости.
-* *link:../press/pressreleases[Пресс-релизы]*: Пресс-релизы проекта FreeBSD и других организаций.
-* *link:../press[Статьи в прессе]*: Упоминания FreeBSD в периодических изданиях.
-* *link:https://www.FreeBSD.org/status/[Отчёт о Статусах]*: Отчет о статусе разработки FreeBSD (выпускается раз в два месяца).
+https://freebsdfoundation.org/our-work/latest-updates/[Последние обновления | Фонд FreeBSD]
+
+link:../status/[Отчёты о состоянии работ FreeBSD]
+
+link:../press/[FreeBSD в прессе]
+////
+== Подкаст
+////
 
 == Другие сайты
 
-* *http://slashdot.org/bsd/[Раздел BSD на сайте Slashdot]*: Ссылки и обсуждение новостей BSD, и не только FreeBSD.
-* *http://www.bsdnews.org/[BSDnews]*: Онлайн журнал, специализирующийся на BSD.
-* *http://www.daemonnews.org/[Daemon News]*: Ежемесячные статьи и ежедневные обсуждения всего, что касается BSD.
-* *http://www.daemonnews.org/newsletter/[Really-Quick(tm) NewsLetter]*: На тот случай, если у вас нет времени.
-* *http://www.freebsddiary.org/[FreeBSD Diary]*: Записи одного человека о своих попытках и достижениях с FreeBSD.
-* *http://www.onlamp.com/bsd/[BSD DevCenter]*: Единый портал ONLamp.com/O'Reilly Network для размещения публикаций о BSD, новостей, пособий или информации общего характера.
-* *http://www.bsdvault.net[BSD Vault]*: Веб-портал, поддерживаемый пользователями, который предназначен для распространения операционных систем семейства BSD.
-* *http://bsdfreak.org[BSD Freak]*: Сайт, предназначенный для предоставления статей, связанных с BSD и пособий, написанных с точки зрения пользователя.
-* *http://www.kerneltrap.org[Kerneltrap]*: Ежедневные статьи и последние новости о ядрах FreeBSD и Linux.
-* *http://www.osnews.com[OSNews]*: Ежедневные статьи и последние новости о Linux, BSD и других операционных системах.
+https://www.bsdnow.tv/[BSD Now]
+
+* Еженедельный подкаст, выпуски выходят по четвергам
+* Записывается дважды в месяц и при наличии возможности транслируется по средам
+* Новости, интервью, обучающие материалы, поддержка и вопросы о любой операционной системе BSD
+* Полезно и информативно для новичков – интересно для профессионалов.
+
+https://dan.langille.org/[Другой дневник Дэна Лэнгвилла]
+
+* преемник _The FreeBSD Diary_, который предоставлял практические примеры с 1988 по 2012 год
+* https://www.langille.org/[Дэн является], среди прочего, коммиттером в дереве портов FreeBSD.
+
+https://www.osnews.com/topic/freebsd/[FreeBSD – OSnews]
+
+https://slashdot.org/bsd/[BSD – Slashdot]
+
+Phoronix:
+
+* https://www.phoronix.com/linux/BSD[BSD] (категория)
+* https://www.phoronix.com/search/FreeBSD[FreeBSD] (результаты поиска).
+
+https://daemonforums.org/forumdisplay.php?f=40[Новости – DaemonForums]
+
+* BSD и связанное с ней.
+
+//
+// The FreeBSD Russian Documentation Project
+//
+// Original EN revision (04.12.2022): b6020386c77e1c7a6e77144a4aa4309060fec9a3
+//
