website: RU - sync ru/support pages
Reviewed by: andy, marck
Differential Revision: https://reviews.freebsd.org/D53858

--- a/website/content/ru/support/webresources.adoc
+++ b/website/content/ru/support/webresources.adoc
@@ -1,44 +1,40 @@
 ---
-title: "Web ресурсы"
+title: "Веб-ресурсы"
 sidenav: support
 ---
 
-= Web ресурсы
+= Веб-ресурсы
 
 * <<general,Общая информация о UNIX(R)>>
 * <<xwin,Система X Window>>
-* <<hardware,Аппаратное обеспечение>>
-* <<related,Related Operating System Projects>>
+* <<related,Другие проекты в области операционных систем>>
 
 [[general]]
 == Общая информация о UNIX(R)
 
-* http://www.technion.ac.il/guides/unix.html[The Unix Reference Desk] Дженнифера Майерса (Jennifer Myers)
-* http://www.ugu.com/[Unix Guru Universe]
-* http://www.ora.com/[O'Reilly & Associates, Inc.]
-* http://www.unixpower.org[Unix Power]
+* https://distrowatch.com/table.php?distribution=freebsd[Страница FreeBSD Distrowatch]
+* https://www.bsdnow.tv/[Подкасты BSD Now]
+* https://www.oreilly.com/[O'Reilly Media, Inc.]
 
 [[xwin]]
 == Система X Window
 
-* Проекты http://www.x.org/[X.Org] и http://www.xfree86.org/[XFree86(TM)] предлагают пользователям различных версий UNIX(R) систем для платформы Intel, включая FreeBSD, отличную реализацию системы X Window system.
-* Проект http://www.winehq.com/[WINE] работает над возможностью использовать программное обеспечение Microsoft Windows(R) на базирующихся под Intel UNIX систем, таких как FreeBSD, NetBSD и Linux.
-
-[[hardware]]
-== Аппаратное обеспечение
-
-* _comp.answers_ ftp://rtfm.mit.edu/pub/usenet-by-hierarchy/comp/answers/pc-hardware-faq[pc-hardware-faq] является хорошим справочником для тех, кто занимается сборкой машины для себя.
-* http://www.x86.org/[Intel Secrets -- What Intel Doesn't Want You To Know] - масса информации о процессорах Intel.
-* http://www.faqs.org/faqs/pc-hardware-faq/chiplist/[Aad Offerman's Chip List] - справочный материал о чипсетах, используемых в PC-клонах.
+* Проект https://www.x.org/[X.Org] предлагает пользователям различных версий UNIX(R) систем для платформы Intel, включая FreeBSD, отличную реализацию системы X Window.
+* Проект https://www.winehq.com/[WINE] работает над возможностью использовать программное обеспечение Microsoft Windows(R) в системах UNIX на основе Intel, таких как FreeBSD, NetBSD и Linux.
 
 [[related]]
 == Другие проекты в области операционных систем
 
-* http://www.netbsd.org/[*NetBSD*] - это другая свободно распространяемая операционная система, базирующаяся на 4.4BSD Lite, работающая на нескольких различных архитектурах.
-* http://www.openbsd.org/[*OpenBSD*] - это еще одна ветвь развития 4.4BSD с акцентом на безопасность.
-* http://www.linux.org/[*Linux*] - ещё одна свободно распространяемая UNIX(R)-подобная система.
-* http://www.opendarwin.org/[*Darwin*] - это свободно распространяемая система, лежащая в основе системы http://www.apple.com/macosx/[Mac OS X] компании Apple.
-* http://www.cs.utah.edu/flux/lites/html/[*Lites*] - это сервер на основе 4.4BSD Lite и эмулирующая библиотека, что позволяет достичь функциональности UNIX(R) на системах, основанных на микроядре Mach.
-* Проект http://www.gnu.org/software/hurd/hurd.html[*GNU Hurd*] представляет собой еще одну попытку разработать свободно распространяемую UNIX(R)-подобную операционную систему.
-* http://www.dragonflybsd.org/[*DragonFly BSD*] основана на FreeBSD 4.X, но направления её разработки отличаются от FreeBSD 5.X.
-* http://opensolaris.org/os/[*OpenSolaris*] это операционная система с открытым кодом является вариацией ОС Solaris компании Sun Microsystems, которая также является производной от BSD и была названа SunOS. Основная часть кода была открыта, но вся операционная система по-прежнему распространяется старым способом.
+* https://www.netbsd.org/[*NetBSD*] - это другая свободно распространяемая операционная система, базирующаяся на 4.4BSD Lite, работающая на нескольких различных архитектурах.
+* https://www.openbsd.org/[*OpenBSD*] - это ещё одна ветвь развития 4.4BSD с акцентом на безопасность.
+* https://www.kernel.org/[*Linux*] - ещё одна свободно распространяемая UNIX(R)-подобная система.
+* https://www.cs.utah.edu/flux/lites/html/[*Lites*] - это сервер на основе 4.4BSD Lite и эмулирующая библиотека, что позволяет достичь функциональности UNIX(R) на системах, основанных на микроядре Mach.
+* https://www.gnu.org/software/hurd/hurd.html[*GNU Hurd*] представляет собой еще одну попытку разработать свободно распространяемую UNIX(R)-подобную операционную систему.
+* https://www.dragonflybsd.org/[*DragonFly BSD*] основана на FreeBSD 4.X, но направления её разработки отличаются от FreeBSD 5.X.
+* https://opensolaris.org/os/[*OpenSolaris*] это операционная система с открытым кодом, являющаяся вариацией ОС Solaris, которая, в свою очередь, является производной от BSD, именуемой SunOS.
+
+//
+// The FreeBSD Russian Documentation Project
+//
+// Original EN revision (07.03.2025): 42e3f0422f203968ba4a7de2d56df6edd147f683
+//
