--- a/website/content/ru/support/bugreports.adoc
+++ b/website/content/ru/support/bugreports.adoc
@@ -9,18 +9,23 @@ include::shared/ru/urls.adoc[]
 
 == База данных сообщений о проблемах
 
-Имеющиеся на данный момент сообщения о проблемах во FreeBSD отслеживаются при помощи базы данных http://www.gnu.org/software/gnats/[GNATS].
+* https://bugs.FreeBSD.org/search/[Поиск сообщений о проблемах].
+* https://bugs.FreeBSD.org/submit/[Отправка сообщения о проблеме].
 
-Сообщение о проблеме во FreeBSD (PR) не обязательно является ошибкой собственно системы. В некоторых случаях это может быть сообщение об ошибке в документации (которые могут быть просто опечатками). В других случаях это может быть просто пожелание, которое посылающий хотел бы видеть реализованным во FreeBSD. Во многих случаях PR содержит порт, подготовленный к включению во FreeBSD в коллекцию link:../../ports/[портов и Пакетов].
+Сообщение о проблеме во FreeBSD (PR) не обязательно является ошибкой собственно системы. В некоторых случаях это может быть сообщение об ошибке в документации (которая может быть всего лишь опечаткой). В других случаях это может быть просто пожелание, которое отправитель хотел бы видеть реализованным во FreeBSD.
 
 Сообщения о проблемах появляются как 'открытые', и закрываются, когда поднятый вопрос решается. Кроме того, каждому PR для отслеживания присваивается уникальный идентификатор, который гарантирует то, что оно не потеряется. Многие изменения во FreeBSD включают идентификатор этого PR, который вызвал это изменение.
 
-* link:https://www.FreeBSD.org/cgi/query-pr-summary.cgi[Просмотр сообщений о проблемах].
-* link:https://bugs.FreeBSD.org/submit/[Отправка сообщения о проблеме].
-* link:../../prstats/[Просмотр статистики по PR].
-
 == Как отправить сообщение о проблеме
 
-Сообщения о проблемах могут быть отправлены группе разработчиков с помощью команды link:https://www.FreeBSD.org/cgi/man.cgi?query=send-pr&sektion=1[send-pr(1)], входящей в поставку FreeBSD. Также вы можете воспользоваться link:https://bugs.FreeBSD.org/submit/[веб-формой] или отправить сообщение по адресу freebsd-bugs@FreeBSD.org. Заметьте, что предпочтительней пользоваться командой link:https://bugs.FreeBSD.org/submit/[send-pr], потому что сообщения, посланные в список рассылки, _не_ отслеживаются как официальные сообщения о проблемах и могут потеряться в потоке остальных сообщений!
+Сообщения о проблемах могут быть отправлены группе разработчиков с помощью https://bugs.FreeBSD.org/submit/[веб-формы]. Для отправки сообщения об ошибке потребуется создать учётную запись. Заметьте, что сообщения, посланные в список рассылки, _не_ отслеживаются как официальные сообщения о проблемах и могут потеряться в потоке остальных сообщений!
 
-Перед тем, как послать сообщение о проблеме, вам будет полезно прочесть публикацию link:{problem-reports}[Написание сообщений о проблемах во FreeBSD]. Эта статья описывает, когда вы должны формировать сообщение о проблеме, что вы должны включить в него, и как лучше всего его опубликовать. Некоторая полезная начальная информация есть также в статье link:{pr-guidelines}[Наставления по работе с сообщениями о проблемах].
+Перед тем, как послать сообщение о проблеме, вам будет полезно прочесть публикацию link:{problem-reports}[Составление сообщений о проблеме во FreeBSD]. Эта статья описывает, когда вы должны формировать сообщение о проблеме, что вы должны включить в него, и как лучше всего его опубликовать. Некоторая полезная начальная информация есть также в статье link:{pr-guidelines}[Руководство по обработке отчётов о проблемах].
+
+Сообщения о проблемах FreeBSD обрабатываются с помощью системы http://www.bugzilla.org/[Bugzilla].
+
+//
+// The FreeBSD Russian Documentation Project
+//
+// Original EN revision (26.11.2023): 2921c5a6a99997ab3acc637e05f9ab44de6001fa
+//
