website: RU - sync ru/snapshot pages
Reviewed by: andy, marck
Differential Revision: https://reviews.freebsd.org/D53880

--- a/website/themes/beastie/i18n/ru.toml
+++ b/website/themes/beastie/i18n/ru.toml
@@ -488,7 +488,7 @@ other = "Про\u00ADдук\u00ADтив\u00ADный ре\u00ADлиз"
 other = "Пред\u00ADсто\u00ADя\u00ADщий ре\u00ADлиз"
 
 [snapshotReleases]
-other = "Снэпшот-релизы"
+other = "Про\u00ADме\u00ADжу\u00ADточ\u00ADные сбор\u00ADки"
 
 [portedApplications]
 other = "Пор\u00ADти\u00ADро\u00ADван\u00ADные при\u00ADло\u00ADже\u00ADния"
