website: RU - sync ru/security pages
Reviewed by: andy, marck
Differential Revision: https://reviews.freebsd.org/D53881

--- a/website/content/ru/security/notices.adoc
+++ b/website/content/ru/security/notices.adoc
@@ -6,4 +6,12 @@ security: notices
 
 = Уведомления об исправлениях FreeBSD
 
-Данная веб страница содержит список выпущенных уведомлений об исправлениях FreeBSD.
+Данная веб-страница содержит список выпущенных уведомлений об исправлениях FreeBSD.
+
+Уязвимости безопасности, затрагивающие базовую систему, рассматриваются отдельно на странице link:../advisories[Бюллетени безопасности FreeBSD].
+
+//
+// The FreeBSD Russian Documentation Project
+//
+// Original EN revision (06.12.2023): 58fb46dd8fde39eb1aeaa55b50227ff04530c804
+//
