website: RU - sync ru/search pages
Reviewed by: andy, marck
Differential Revision: https://reviews.freebsd.org/D53882

--- a/website/content/ru/search/_index.adoc
+++ b/website/content/ru/search/_index.adoc
@@ -10,39 +10,58 @@ include::shared/ru/urls.adoc[]
 == Службы поиска FreeBSD
 
 * <<web,Страницы WWW>>
+* <<manpages,Страницы Справочника>>
+* <<ports,Порты>>
 * <<mailinglists,Архивы списков рассылки>>
-* link:search-mid.html[Message-ID]
-* http://www.FreeBSD.org/cgi/query-pr-summary.cgi?query[База данных сообщений о проблемах (ошибках) GNATS]
-* http://www.FreeBSD.org/cgi/man.cgi[Страницы Справочника]
-* http://www.FreeBSD.org/cgi/ports.cgi[Изменения в коллекции портов]
-* http://minnie.tuhs.org/FreeBSD-srctree/FreeBSD.html[Исходный код]
-* http://minnie.tuhs.org/BSD-info/bsdnews_search.html[Сервер поиска по телеконференциям Usenet, посвящённым BSD]
-* http://www.google.com/bsd[Поиск в Google по тематике BSD]
-* http://www.greasydaemon.com/[GreasyDaemon], система поиска по теме BSD UNIX, объединяющая в себе всё
-* http://freebsd.rambler.ru/[Поиск по архивам списков рассылки FreeBSD]
+* link:search-mid[Message-ID]
+* https://bugs.FreeBSD.org/search/[База данных сообщений о проблемах (ошибках)]
+* link:https://man.freebsd.org/cgi/man.cgi[Страницы справочника]
+* link:https://ports.freebsd.org/cgi/ports.cgi[Поиск по портам]
+* http://fxr.watson.org/[Исходный код]
+
+link:opensearch[Список плагинов OpenSearch для FreeBSD]
 
 '''''
 
 [[web]]
-== Страницы WWW (включая link:{faq}[FAQ] и link:{handbook}[Руководство])
+== Веб-страницы (в том числе link:{faq}[FAQ], link:{handbook}[Руководство], link:https://lists.freebsd.org/index[Почтовые рассылки], link:https://wiki.freebsd.org[Wiki] и link:https://forums.freebsd.org[Форумы]))
+
+=== Поиск внутри сайтов:
+
+{{< form-search-site >}}
+
+'''''
+
+[[manpages]]
+== Страницы Справочника
 
 === Поиск:
 
-_Замечание: Используйте операторы AND и NOT для сужения области поиска. link:searchhints[Дополнительные советы находятся здесь]._
+{{< form-search-man >}}
 
-Количество выводимых результатов ограничено числом 5 10 25 50 100 250 Web Pages Ported Applications
+'''''
 
-{{< form-search-site >}}
+[[ports]]
+== Порты
+
+=== Поиск:
+
+{{< form-search-ports >}}
 
 '''''
 
 [[mailinglists]]
 == Архивы списков рассылки
 
-Переиндексация http://www.FreeBSD.org/mail/[архива списков рассылки] теперь происходит еженедельно!
+Переиндексация https://lists.FreeBSD.org/index/[архива списков рассылки] теперь происходит еженедельно!
 
-В качестве альтернативы для чтения списков рассылки может быть использован http://lists.FreeBSD.org/mailman/listinfo[Mailman/Pipermail архив] (учтите, что этот архив содержит сообщения только с марта 2003 года).
-
-Списки рассылки (а также много чего еще) также архивируются на сервере http://www.geocrawler.com/[GeoCrawler].
+В качестве альтернативы для чтения списков рассылки может быть использован http://lists.FreeBSD.org/pipermail[архив Pipermail] (учтите, что этот архив содержит сообщения только с марта 2003 по май 2021 года).
 
 {{< form-search-mail >}}
+
+//
+// The FreeBSD Russian Documentation Project
+//
+// Original EN revision (08.12.2023): 94ec0bdbac6730977b5175527225ef9c66aaef35
+//
+
