--- a/website/content/ru/search/search-mid.adoc
+++ b/website/content/ru/search/search-mid.adoc
@@ -1,7 +1,7 @@
 ---
 title: "Поиск по Message-ID в списках рассылки"
 sidenav: about
---- 
+---
 
 = Поиск по Message-ID в списках рассылки
 
@@ -10,5 +10,12 @@ sidenav: about
 {{< form-search-mid-message >}}
 
 Вы можете выполнять поиск только по служебным полям почтовых сообщений *Message-ID*, *Resent-Message-id*, *In-Reply-to* и *References*. Поле Message-ID выглядит как <199802242058.MAA24843@monk.via.net>. Другие служебные поля не поддерживаются. База данных с Message-ID будет обновляться каждый час.
+База данных Message-ID будет обновляться каждые 5 минут.
 
 link:../#mailinglists[Архивы полных текстов сообщений в списках рассылки].
+
+//
+// The FreeBSD Russian Documentation Project
+//
+// Original EN revision (09.01.2023): b2ca25aa7bb7cf5bd064ab42d54100be0d55c039
+//
