--- a/website/content/ru/search/searchhints.adoc
+++ b/website/content/ru/search/searchhints.adoc
@@ -1,7 +1,7 @@
 ---
 title: "Советы по поиску"
 sidenav: about
---- 
+---
 
 = Советы по поиску
 
@@ -19,3 +19,9 @@ sidenav: about
 '''''
 
 link:..[Возврат к странице поисковой службы]
+
+//
+// The FreeBSD Russian Documentation Project
+//
+// Original EN revision (21.02.2021): eb4b89b8d31574df0a18fc5f7562181ccd6eecd6
+//
